fixing z-index

--- a/frontend/src/components/UserPopUp/styles.module.sass
+++ b/frontend/src/components/UserPopUp/styles.module.sass
@@ -1,10 +1,10 @@
 $colorText: var(--title-text) // цвет текста
 $coloractive: #CECCC0 // цвет активной строки
 
-.panepPopUp
+.panelPopUp
   margin-top: 20px
-  padding-top: 20px
-  padding-bottom: 20px
+  padding: 10px 0
+  z-index: 101
 
 .panelSelect
   background: none
@@ -21,7 +21,6 @@ $coloractive: #CECCC0 // цвет активной строки
   color: $colorText
   cursor: pointer
   &:hover
-    text-decoration: underline
+    background-color: var(--workspace-toolbar-select-background)
   &:visited
     color: $colorText
-
